@@ -82,82 +82,47 @@ float4 ps_main_DMD_no(in VS_OUTPUT IN) : COLOR
 }
 #endif
 
-float4 ps_main_DMD_big(in VS_OUTPUT IN) : COLOR
-{
-   const float4 rgba = tex2Dlod(texSampler0, float4(IN.tex0, 0.,0.));
-   float3 color = vColor_Intensity.xyz * vColor_Intensity.w; //!! create function that resembles LUT from VPM?
-   if(rgba.a != 0.0)
-      color *= rgba.bgr;
-   else
-      color *= rgba.b * (255.9 / 100.);
-
-   const float2 xy = IN.tex0 * vRes_Alpha.xy;
-   const float2 dist = frac(xy)*2.2-1.1;
-   const float d = dist.x*dist.x+dist.y*dist.y;
-
-   color *= smoothstep(0.,1.,1.0-d*d);
-
-   /*float3 color2 = float3(0,0,0);
-   [unroll] for(int j = -1; j <= 1; ++j)
-     [unroll] for(int i = -1; i <= 1; ++i)
-	 {
-	 //collect glow from neighbors
-	 }*/
-
-   return float4(InvToneMap(InvGamma(color/*+color2*/)), 1.); //!! meh, this sucks a bit performance-wise, but how to avoid this when doing fullscreen-tonemap/gamma without stencil and depth read?
-}
-
 float4 ps_main_DMD(in VS_OUTPUT IN) : COLOR
 {
-   const float4 rgba = tex2Dlod(texSampler0, float4(IN.tex0, 0.,0.));
-   float3 color = vColor_Intensity.xyz * (1.25 * vColor_Intensity.w); //!! create function that resembles LUT from VPM?
-   if(rgba.a != 0.0)
-      color *= rgba.bgr;
-   else
-      color *= rgba.b * (255.9 / 100.);
+   const float2 ddxs = ddx(IN.tex0)*0.4; // use ddx and ddy to help the oversampling below/make filtering radius dependent on projected 'dot'/texel
+   const float2 ddys = ddy(IN.tex0)*0.4;
 
-   const float2 xy = IN.tex0 * vRes_Alpha.xy;
-   const float2 dist = frac(xy)*2.-1.;
-   const float d = dist.x*dist.x+dist.y*dist.y;
+   // brute force oversampling of DMD-texture and especially the dot-function (using 25 samples)
+   float3 color2 = float3(0., 0., 0.);
+   [unroll] for(int j = -2; j <= 2; ++j)
+   {
+   const float2 uvj = IN.tex0 + float(j)*ddys; 
+   [unroll] for(int i = -2; i <= 2; ++i)
+   {
+      const float2 uv = uvj + float(i)*ddxs;
 
-   color *= saturate(1.0-d);
+      const float4 rgba = tex2Dlod(texSampler0, float4(uv, 0., 0.)); //!! lots of tex access by doing this all the time, but (tex) cache should be able to catch all of it
+      float3 color = vColor_Intensity.xyz * vColor_Intensity.w; //!! create function that resembles LUT from VPM?
+      if (rgba.a != 0.0)
+         color *= rgba.bgr;
+      else
+         color *= rgba.b * (255.9 / 100.);
 
-   /*float3 color2 = float3(0,0,0);
+      // simulate dot within the sampled texel
+      const float2 dist = frac(uv*vRes_Alpha.xy)*2.2 - 1.1;
+      const float d = dist.x*dist.x + dist.y*dist.y;
+
+      color2 += color*smoothstep(0., 1., 1.0 - d*d);
+   }
+   }
+   color2 *= 1./25.;
+
+   /*float3 colorg = float3(0,0,0);
    [unroll] for(int j = -1; j <= 1; ++j)
-     [unroll] for(int i = -1; i <= 1; ++i)
-	 {
-	 //collect glow from neighbors
-	 }*/
-
-   return float4(InvToneMap(InvGamma(color/*+color2*/)), 1.); //!! meh, this sucks a bit performance-wise, but how to avoid this when doing fullscreen-tonemap/gamma without stencil and depth read?
-}
-
-float4 ps_main_DMD_tiny(in VS_OUTPUT IN) : COLOR
-{
-   const float4 rgba = tex2Dlod(texSampler0, float4(IN.tex0, 0.,0.));
-   float3 color = vColor_Intensity.xyz * (1.5 * vColor_Intensity.w); //!! create function that resembles LUT from VPM?
-   if(rgba.a != 0.0)
-      color *= rgba.bgr;
-   else
-      color *= rgba.b * (255.9 / 100.);
-
-   const float2 xy = IN.tex0 * vRes_Alpha.xy;
-   const float2 dist = frac(xy)*1.4142-0.7071;
-   const float d = dist.x*dist.x+dist.y*dist.y;
-
-   color *= 1.0-pow(d, 0.375);
-
-   /*float3 color2 = float3(0,0,0);
-   [unroll] for(int j = -1; j <= 1; ++j)
-     [unroll] for(int i = -1; i <= 1; ++i)
-	 {
-	 //collect glow from neighbors
-	 }*/
+   [unroll] for(int i = -1; i <= 1; ++i)
+   {
+      //collect glow from neighbors
+   }*/
 
    //if (rgba.b > 200.0)
-   //   return float4(InvToneMap(InvGamma(min(color,float3(1.5,1.5,1.5))/*+color2*/)), 0.5f);
+   //   return float4(InvToneMap(InvGamma(min(color2,float3(1.5,1.5,1.5))/*+colorg*/)), 0.5f);
    //else
-   return float4(InvToneMap(InvGamma(min(color,float3(1.5,1.5,1.5))/*+color2*/)), vRes_Alpha.z); //!! meh, this sucks a bit performance-wise, but how to avoid this when doing fullscreen-tonemap/gamma without stencil and depth read?
+   return float4(InvToneMap(InvGamma(color2/*+colorg*/)), vRes_Alpha.z); //!! meh, this sucks a bit performance-wise, but how to avoid this when doing fullscreen-tonemap/gamma without stencil and depth read?
 }
 
 float4 ps_main_noDMD(in VS_OUTPUT IN) : COLOR
@@ -172,31 +137,23 @@ float4 ps_main_noDMD_notex(in VS_OUTPUT IN) : COLOR
    return float4(InvToneMap(InvGamma(vColor_Intensity.xyz * vColor_Intensity.w)), 1.0f); //!! meh, this sucks a bit performance-wise, but how to avoid this when doing fullscreen-tonemap/gamma without stencil and depth read?
 }
 
+
 technique basic_DMD
 { 
    pass P0 
-   { 
+   {
       VertexShader = compile vs_3_0 vs_main(); 
-	  PixelShader = compile ps_3_0 ps_main_DMD();
-   } 
+      PixelShader = compile ps_3_0 ps_main_DMD();
+   }
 }
 
-technique basic_DMD_big
-{ 
-   pass P0 
-   { 
-      VertexShader = compile vs_3_0 vs_main(); 
-	  PixelShader = compile ps_3_0 ps_main_DMD_big();
-   } 
-}
-
-technique basic_DMD_tiny
-{ 
-   pass P0 
-   { 
-      VertexShader = compile vs_3_0 vs_main(); 
-	  PixelShader = compile ps_3_0 ps_main_DMD_tiny();
-   } 
+technique basic_DMD_world
+{
+    pass P0
+    {
+        VertexShader = compile vs_3_0 vs_simple_main();
+        PixelShader = compile ps_3_0 ps_main_DMD();
+    }
 }
 
 
@@ -205,7 +162,7 @@ technique basic_noDMD
    pass P0 
    { 
       VertexShader = compile vs_3_0 vs_main(); 
-	  PixelShader = compile ps_3_0 ps_main_noDMD();
+      PixelShader = compile ps_3_0 ps_main_noDMD();
    } 
 }
 
@@ -214,15 +171,6 @@ technique basic_noDMD_notex
    pass P0 
    { 
       VertexShader = compile vs_3_0 vs_main(); 
-	  PixelShader = compile ps_3_0 ps_main_noDMD_notex();
+      PixelShader = compile ps_3_0 ps_main_noDMD_notex();
    } 
-}
-
-technique basic_DMD_tiny_world
-{
-    pass P0
-    {
-        VertexShader = compile vs_3_0 vs_simple_main();
-        PixelShader = compile ps_3_0 ps_main_DMD_tiny();
-    }
 }
